--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
     port: 8080
-    context-path: #/liuzh/
+    context-path: /
 
 logging:
     level:
@@ -41,23 +41,12 @@ spring:
     freemarker:
         cache: false
         request-context-attribute: request
-
-#以下属性不可用
-#mybatis:
-#    pagehelper:
-#        dialect: mysql
-#        reasonable: true
-#        supportMethodsArguments: true
-#        returnPageInfo: check
-#        params: count=countSql
-#    mapper:
-#        mappers: tk.mybatis.springboot.util.MyMapper
-#        notEmpty: true
-#        style: camelhump
-#    sqlSessionFactoryBean:
-#        mapperLocations:
-#            - classpath:mapper/*.xml
-#            - classpath:mapper2/*.xml
-#        typeAliasesPackage: tk.mybatis.springboot.model
-#    mapperScanner:
-#        basePackage: tk.mybatis.springboot.mapper
+    redis:
+        host: 192.168.4.93
+#		password: 
+        port: 6379
+#		pool:
+#			max-idle=8 # pool settings ...
+#			min-idle=0
+#			max-active=8
+#			max-wait=-1
